add getChildrenPath